# readability.rs

./: Cargo.toml  README.md
benches/: lib.rs
samples/base_url/: metadata.json
samples/bbc/: metadata.json  source.html
samples/buzzfeed/: metadata.json
samples/cnet/: metadata.json
samples/ehow_2/: metadata.json
samples/heise/: metadata.json
samples/herald_sun/: metadata.json
samples/iab/: metadata.json
samples/libertation/: metadata.json
samples/medium_1/: metadata.json
samples/medium_2/: metadata.json
samples/mozilla_1/: metadata.json
samples/msn/: metadata.json
samples/nytimes_1/: metadata.json
samples/replace_font_tags/: metadata.json
samples/social_buttons/: metadata.json
samples/wikia/: metadata.json
samples/wikipedia/: metadata.json
samples/wordpress/: metadata.json
src/: lib.rs  metadata.rs  node_cache.rs
tests/: lib.rs
