[package]
name = "readability"
version = "0.1.0"
description = "Really fast readability."
keywords = ["dom", "html", "text", "extraction"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/readability.rs"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "loyd/readability.rs" }

[dependencies]
log = "0.4.17"
kuchiki = "^0.4.1"
lazy_static = "1.4.0"
regex = "1.6.0"
html5ever-atoms = "^0.2.1"
url = "2.3.1"

[dev-dependencies]
env_logger = "0.9.3"
