[package]
name = "readable-readability"
edition = "2021"
version = "0.3.0"
description = "Really fast readability."
keywords = ["dom", "html", "text", "extraction"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/readable-app/readability.rs"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.17"
kuchiki = "0.8.1"
html5ever = "0.25.2"
lazy_static = "1.4.0"
regex = "1.6.0"
url = "2.3.1"

[dev-dependencies]
env_logger = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["std"]}
